--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <title>Vite + React + TS</title>
+    <title>Portfolio | bencodes</title>
   </head>
   <body>
     <div id="root"></div>
