--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
+    <meta property="og:title" content="Portfolio | bencodes" />
+    <meta property="og:type" content="portfolio" />
+    <meta property="og:url" content="https://bencodes.de" />
+    <meta
+      property="og:image"
+      content="https://www.bencodes.de/img/portfolio/landing.png"
+    />
     <title>Portfolio | bencodes</title>
   </head>
   <body>
