Updated Meta tags to account for different social media platforms

--- a/index.html
+++ b/index.html
@@ -6,14 +6,39 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <meta property="og:title" content="Portfolio | bencodes" />
-    <meta property="og:type" content="portfolio" />
+    <!-- HTML Meta Tags -->
+    <title>Portfolio | bencodes</title>
+    <meta
+      name="description"
+      content="Explore my projects, skills, and professional journey. Available for new opportunities and collaborations."
+    />
+
+    <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://bencodes.de" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Portfolio | bencodes" />
+    <meta
+      property="og:description"
+      content="Explore my projects, skills, and professional journey. Available for new opportunities and collaborations."
+    />
     <meta
       property="og:image"
       content="https://www.bencodes.de/img/portfolio/landing.png"
     />
-    <title>Portfolio | bencodes</title>
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="bencodes.de" />
+    <meta property="twitter:url" content="https://bencodes.de" />
+    <meta name="twitter:title" content="Portfolio | bencodes" />
+    <meta
+      name="twitter:description"
+      content="Explore my projects, skills, and professional journey. Available for new opportunities and collaborations."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.bencodes.de/img/portfolio/landing.png"
+    />
   </head>
   <body>
     <div id="root"></div>
