--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       name="twitter:image"
       content="https://www.bencodes.de/img/portfolio/landing.png"
     />
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   </head>
   <body>
     <div id="root"></div>
