--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       name="twitter:image"
       content="https://www.bencodes.de/img/portfolio/landing.png"
     />
-    <link rel="icon" type="image/x-icon" href="https://bencodes.de/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
