--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="https://www.bencodes.de/img/portfolio/landing.png"
+      content="https://www.bencodes.de/img/portfolio/landing.webp"
     />
 
     <!-- Twitter Meta Tags -->
@@ -37,7 +37,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.bencodes.de/img/portfolio/landing.png"
+      content="https://www.bencodes.de/img/portfolio/landing.webp"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
