--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#000000" />
   </head>
   <body>
     <div id="root"></div>
